--- a/web-thu/about.html
+++ b/web-thu/about.html
@@ -59,7 +59,7 @@
 					<a class="active" href="about.html">关于我们</a>
 					<a href="news.html">通知公告</a>
 					<a href="undergraduate.html">博士项目</a>
-					<a href="school.html">学术报告</a>
+					<a href="report.html">学术报告</a>
 					<a href="recruit.html">招生信息</a>
 					<a href="development.html">就业发展</a>
 				</div>
@@ -76,7 +76,7 @@
 	</nav>
 	<!-- 顶部banner -->
 	<div class="ty-banner">
-		<img class="banner-img" src="./images/new/banner-bk.png" alt="">
+		<img class="banner-img" src="./images-2/about-top.png" alt="">
 		<div class="container-2">
 			<h2>关于我们</h2>
 		</div>
@@ -111,32 +111,35 @@
 		</div>
 	</div>
 
-	<!-- 通识教育 -->
-	<div class="ty-general">
-		<h3 class="ty-title">通识教育</h3>
-		<div class="in">
-			<div class="img"><img src="./images/new/bk-banner.png" alt=""></div>
-			<p>通识教育是融合价值塑造、能力培养、知识获取的“三位一体”的教育，特别强调对学生的好奇心、想象力、批判性思维能力的培养；个性发展既关注学生个性的发展，又对学生实行个性化的培养，为学生自由成长创造环境和提供机会。<a
-					class="ty-more" href="">查看更多</a></p>
-		</div>
-	</div>
-
-	<!-- 培养理念 -->
+	<!-- 学院简介 -->
 	<div class="ty-training">
-		<!-- <img src="./images/new/ll.png" alt=""> -->
-		<div class="in">
-			<h3 class="ty-title">培养理念</h3>
-			<p>
-				清华大学经济管理学院（以下简称“清华经管学院”）成立于1984年。朱镕基担任首任院长（1984-2001）。现任院长是海内外著名经济学家白重恩教授。清华经管学院集经济学科、管理学科为一体，是我国培养经济类、管理类精英人才的摇篮。经过三十多年的快速发展，现今的清华经管学院，不但是清华大学最大的学院之一，更是中国乃至亚洲地区最优秀的经济管理学院之一。
-			</p>
-			<p>年4月，清华经管学院提出了“通识教育与个性发展相结合”的本科教育理念，并从2009年秋季学期开始实施新本科培养方案。这一改革获得2014年国家级教学成果一等奖。</p>
-			<a class="ty-more" href="">查看更多</a>
+		<div class="about-list">
+			<ul>
+				<li>
+					<em class="index">.01</em>
+					<em class="tag"></em>
+					<a class="ty-more-2" href="">查看更多 ></a>
+					<p>率先获得AACSB和EQUIS两大全球管理教育顶级认证的中国内地商学院</p>
+				</li>
+				<li>
+					<em class="index">.01</em>
+					<em class="tag"></em>
+					<a class="ty-more-2" href="">查看更多 ></a>
+					<p>率先获得AACSB和EQUIS两大全球管理教育顶级认证的中国内地商学院</p>
+				</li>
+				<li>
+					<em class="index">.01</em>
+					<em class="tag"></em>
+					<a class="ty-more-2" href="">查看更多 ></a>
+					<p>率先获得AACSB和EQUIS两大全球管理教育顶级认证的中国内地商学院</p>
+				</li>
+			</ul>
 		</div>
 	</div>
 
 	<!-- 联系我们 -->
 	<div class="ty-connect">
-		<img src="images/new/xy.png" alt="">
+		<img src="images-2/about-connect.png" alt="">
 
 		<div class="in">
 			<h3 class="ty-title">联系我们</h3>
@@ -147,7 +150,7 @@
 				网址：http://www.sem.tsinghua.edu.cn<br />
 				微博：http://weibo.com/semjxb
 			</p>
-			<a class="ty-more" href="">欢迎垂询清华经管学院本科招生咨询办公室。</a>
+			<a class="ty-more" href="">欢迎垂询</a>
 		</div>
 	</div>
 
