--- a/web-thu/development.html
+++ b/web-thu/development.html
@@ -59,7 +59,7 @@
 					<a class="active" href="about.html">关于我们</a>
 					<a href="news.html">通知公告</a>
 					<a href="undergraduate.html">博士项目</a>
-					<a href="school.html">学术报告</a>
+					<a href="report.html">学术报告</a>
 					<a href="recruit.html">招生信息</a>
 					<a href="development.html">就业发展</a>
 				</div>
@@ -76,7 +76,7 @@
 	</nav>
 	<!-- 顶部banner -->
 	<div class="ty-banner">
-		<img class="banner-img" src="./images/new/banner-zy.png" alt="">
+		<img class="banner-img" src="./images-2/dev-top.png" alt="">
 		<div class="container-2">
 			<h2>职业发展</h2>
 		</div>
@@ -85,71 +85,105 @@
 		</div>
 	</div>
 
+	<div class="ty-china">
+		<h3 class="ty-title">就业服务</h3>
+
+		<div class="in">
+			<img src="./images-2/dev-1.png" alt="">
+			<div class="detial">
+				<h3>职业发展中心</h3>
+				<p>职业发展中心（Career Development Center, CDC）是清华大学经济管理学院的职能部门，负责本院学生（MBA学生、本科生和硕士生）的职业指导工作，为用人单位提供招聘支持。
+				</p>
+				<a class="ty-more" href="">查看更多</a>
+			</div>
+		</div>
+	</div>
+
 	<!-- 就业指导 -->
 	<div class="ty-guidance">
-		<h3 class="ty-title">就业指导</h3>
-		<div class="main">
-			<div class="top">
-				<img src="./images/dev-1.png" alt="">
-				<div class="r">
-					<h4>职业发展中心</h4>
-					<p>职业发展中心（Career Development Center, CDC）是清华大学经济管理学院的职能部门，负责本院学生（MBA学生、本科生和硕士生）的职业指导工作，为用人单位提供招聘支持。
-					</p>
-					<a class="ty-more" href=""><strong>查看更多</strong></a>
-				</div>
+		<div class="clearfix">
+			<div class="ty-recruit">
+				<h3 class="ty-title">招聘管理</h3>
+				<ul>
+					<li>
+						<p><span>1</span>在线招聘平台</p>
+					</li>
+					<li>
+						<p><span>2</span>校园招聘专场活动</p>
+					</li>
+					<li>
+						<p><span>3</span>校园集体招聘会</p>
+					</li>
+					<li>
+						<p><span>4</span>发布职位信息</p>
+					</li>
+					<li>
+						<p><span>5</span>推荐毕业生</p>
+					</li>
+				</ul>
 			</div>
-			<div class="clearfix">
-				<div class="ty-recruit">
-					<h3 class="ty-title">招聘管理</h3>
-					<ul>
-						<li>
-							<p><span>1</span>在线招聘平台</p>
-						</li>
-						<li>
-							<p><span>2</span>校园招聘专场活动</p>
-						</li>
-						<li>
-							<p><span>3</span>校园集体招聘会</p>
-						</li>
-						<li>
-							<p><span>4</span>发布职位信息</p>
-						</li>
-						<li>
-							<p><span>5</span>推荐毕业生</p>
-						</li>
-					</ul>
-				</div>
-				<div class="ty-vocation">
-					<h3 class="ty-title">职业指导</h3>
-					<ul>
-						<li>
-							<p><span>1</span>全程职业发展指导</p>
-						</li>
-						<li>
-							<p><span>2</span>一对一职业咨询</p>
-						</li>
-						<li>
-							<p><span>3</span>求职能力训练</p>
-						</li>
-						<li>
-							<p><span>4</span>行业知识讲座</p>
-						</li>
-						<li>
-							<p><span>5</span>参观/座谈/分享/演讲等互动活动</p>
-						</li>
-					</ul>
-				</div>
-				<div class="ty-how-connect">
-					<h3 class="ty-title">联系方式</h3>
-					<ul>
-						<li> <i class="f-ifont">&#xe777;</i> 地址：清华大学经济管理学院舜德楼126</li>
-						<li> <i class="f-ifont">&#xe6f8;</i> 电话：+86-10-62781350/62797110</li>
-						<li> <i class="f-ifont">&#xe608;</i> 传真：+86-10-62781306</li>
-						<li> <i class="f-ifont">&#xe633;</i> 企业电邮：career@sem.tsinghua.edu.cn</li>
-						<li> <i class="f-ifont">&#xe625;</i> 学生电邮：cdc@sem.tsinghua.edu.cn</li>
-					</ul>
-				</div>
+			<div class="ty-vocation">
+				<h3 class="ty-title">职业指导</h3>
+				<ul>
+					<li>
+						<p><span>1</span>全程职业发展指导</p>
+					</li>
+					<li>
+						<p><span>2</span>一对一职业咨询</p>
+					</li>
+					<li>
+						<p><span>3</span>求职能力训练</p>
+					</li>
+					<li>
+						<p><span>4</span>行业知识讲座</p>
+					</li>
+					<li>
+						<p><span>5</span>参观/座谈/分享/演讲等互动活动</p>
+					</li>
+				</ul>
 			</div>
+			<div class="ty-how-connect">
+				<h3 class="ty-title">联系方式</h3>
+				<ul>
+					<li> <i class="f-ifont">&#xe777;</i> 地址：清华大学经济管理学院舜德楼126</li>
+					<li> <i class="f-ifont">&#xe6f8;</i> 电话：+86-10-62781350/62797110</li>
+					<li> <i class="f-ifont">&#xe608;</i> 传真：+86-10-62781306</li>
+					<li> <i class="f-ifont">&#xe633;</i> 企业电邮：career@sem.tsinghua.edu.cn</li>
+					<li> <i class="f-ifont">&#xe625;</i> 学生电邮：cdc@sem.tsinghua.edu.cn</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	</div>
+
+	<div class="ty-years">
+		<img src="./images-2/dev-2.png" alt="">
+		<div class="in">
+			<h3 class="ty-title">历年情况</h3>
+			<ul>
+				<li>
+					<a href="">
+						<span class="time">2018/10/05</span>
+						<h3>2018届毕业生就业报告 </h3>
+						<p>2018年7月1日，为庆祝中国共产党建党97周年，弘扬不畏艰难，艰苦奋斗的时代精神，传承为人民服务，感恩奋进的历史使命，我们十分荣幸地参与了中国农业银行雷山县支行...</p>
+					</a>
+				</li>
+				<li>
+						<a href="">
+							<span class="time">2018/10/05</span>
+							<h3>2018届毕业生就业报告 </h3>
+							<p>2018年7月1日，为庆祝中国共产党建党97周年，弘扬不畏艰难，艰苦奋斗的时代精神，传承为人民服务，感恩奋进的历史使命，我们十分荣幸地参与了中国农业银行雷山县支行...</p>
+						</a>
+					</li>
+					<li>
+							<a href="">
+								<span class="time">2018/10/05</span>
+								<h3>2018届毕业生就业报告 </h3>
+								<p>2018年7月1日，为庆祝中国共产党建党97周年，弘扬不畏艰难，艰苦奋斗的时代精神，传承为人民服务，感恩奋进的历史使命，我们十分荣幸地参与了中国农业银行雷山县支行...</p>
+							</a>
+						</li>
+			</ul>
+			<a class="ty-more" href="">查看更多</a>
 		</div>
 	</div>
 
