--- a/web-thu/index.html
+++ b/web-thu/index.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="format-detection" content="address=no">
 	<title>清华经管学院</title>
@@ -57,7 +58,7 @@
 				<a class="active" href="about.html">关于我们</a>
 				<a href="news.html">通知公告</a>
 				<a href="undergraduate.html">博士项目</a>
-				<a href="school.html">学术报告</a>
+				<a href="report.html">学术报告</a>
 				<a href="recruit.html">招生信息</a>
 				<a href="development.html">就业发展</a>
 			</div>
@@ -78,25 +79,25 @@
 				<div class="swiper-slide">
 					<a href="javascript:;">
 						<img src="./images/swiper1_02.png">
-						<div class="center"><span>清华大学经济管理学院2018级本科生开学典礼暨入学导向举行</span></div>
+						<div class="center"><span>博士毕业生张佳敏在清华经管学院2018毕业典礼上的发言</span></div>
 					</a>
 				</div>
 				<div class="swiper-slide">
 					<a href="javascript:;">
 						<img src="./images/swiper2_02.png">
-						<div class="center"><span>清华大学经济管理学院2018级本科生开学典礼暨入学导向举行</span></div>
+						<div class="center"><span>博士毕业生张佳敏在清华经管学院2018毕业典礼上的发言</span></div>
 					</a>
 				</div>
 				<div class="swiper-slide">
 					<a href="javascript:;">
 						<img src="./images/swiper3_02.png">
-						<div class="center"><span>清华大学经济管理学院2018级本科生开学典礼暨入学导向举行</span></div>
+						<div class="center"><span>博士毕业生张佳敏在清华经管学院2018毕业典礼上的发言</span></div>
 					</a>
 				</div>
 				<div class="swiper-slide">
 					<a href="javascript:;">
 						<img src="./images/swiper4_02.png">
-						<div class="center"><span>清华大学经济管理学院2018级本科生开学典礼暨入学导向举行</span></div>
+						<div class="center"><span>博士毕业生张佳敏在清华经管学院2018毕业典礼上的发言</span></div>
 					</a>
 				</div>
 
@@ -105,46 +106,13 @@
 			<div class="bannar-swiper-pagination swiper-pagination" id="center"></div>
 		</div>
 	</section>
-	<!-- 新闻列表 -->
-	<section class="newList container">
-		<a href="" class="newText clearfix fl">
-			<div class="left fl">
-				<span class="month">JUN</span>
-				<span class="day">19</span>
-			</div>
-			<p class="p1 two_cut">煮雪共话、静待春浓——经管学院首届班主任、辅导员新春酒会举行</p>
-			<p class="p2 three_cut">
-				中英文双语国际新生学费交费系统是为国际学生（包括国际本科生、国际研究生和非学位项目学生）提供的中英线上学费交费系统，具备信息化、网络化、数字化的特征，可以较好解决国际学生学费无法在线支付问题，</p>
-		</a>
-		<a href="" class="newText clearfix fl">
-			<div class="left fl">
-				<span class="month">JUN</span>
-				<span class="day">30</span>
-			</div>
-			<p class="p1 two_cut">白重恩院长与本科生共品下午茶</p>
-			<p class="p2 three_cut">来自两岸76所高校的大学生运动员代表和体育爱好者代表近千人汇聚清华园，共同见证以“ 更亲、更近、更强”为主题口号的海峡两岸（
-				北京）体育交流运动会隆重开幕。国台办副主任龙明彪</p>
-		</a>
-		<a href="" class="newText clearfix fl">
-			<div class="left fl">
-				<span class="month">JUN</span>
-				<span class="day">07</span>
-			</div>
-			<p class="p1 two_cut">2018年度“清华经管学院陈小悦奖学金”颁奖仪式举行</p>
-			<p class="p2 three_cut">2018年11月30日，2018年度“清华经管学院陈小悦奖学金”颁奖仪式举行。6位本科生和4位研究生获得本年度奖学金。</p>
-		</a>
-	</section>
-
-	<p class="add-more">
-		<a class="ty-more" href="">查看所有的新闻 ></a>
-	</p>
 
 	<!-- 文体生活 -->
 	<div class="ty-sport">
-		<h3 class="ty-title">文体生活</h3>
+		<h3 class="ty-title">通知公告</h3>
 
 		<div class="in">
-			<img class="left-img" src="./images/new/school-item.png" alt="">
+			<img class="left-img" src="./images-2/index-new.png" alt="">
 			<div class="main">
 				<div class="list">
 					<a class="item" href=""><span class="time">2015.05.22</span>实践在路上 | 经问边关Day0-2：初见边关</a>
@@ -156,7 +124,142 @@
 			</div>
 		</div>
 	</div>
-	<!-- 底部 -->
+
+	<!-- 博士项目 -->
+	<div class="ty-doctor">
+		<h3 class="ty-title">博士项目</h3>
+		<img class="all-img" src="./images-2/index-doctor.jpg" alt="">
+
+		<div class="doctor-list">
+			<ul>
+				<li>
+					<span class="left">.01</span>
+					<div class="right">
+						<h3>会计学</h3>
+						<p class="text">致力于培养能够在国内外高等院校和科研机构以及政府部门、大型国企和资本市场相关机构从事研究工作、解决实际问题的高素质会计人才。</p>
+						<p class="tags">
+							<em>专业优势</em>
+							<em>培养方案</em>
+							<em>师资力量</em>
+						</p>
+					</div>
+				</li>
+				<li>
+					<span class="left">.02</span>
+					<div class="right">
+						<h3>经济学</h3>
+						<p class="text">研究方向包括微观经-济学、宏观经-济学、数量经-济学、金融学、财政学、产业经-济学和国际经-济学等。</p>
+						<p class="tags">
+							<em>专业优势</em>
+							<em>培养方案</em>
+							<em>师资力量</em>
+						</p>
+					</div>
+				</li>
+				<li>
+					<span class="left">.03</span>
+					<div class="right">
+						<h3>金融学</h3>
+						<p class="text">包括公司金融、资产定价、金融工程、银行与金融机构、市场微观结构、行为金融、金融计量、保险与精算、国际贸易与金融等。</p>
+						<p class="tags">
+							<em>专业优势</em>
+							<em>培养方案</em>
+							<em>师资力量</em>
+						</p>
+					</div>
+				</li>
+				<li>
+					<span class="left">.04</span>
+					<div class="right">
+						<h3>创新创业与战略</h3>
+						<p class="text">创新创业与战略博士项目致力于培养创新创业与战略管理领域的高端学术人才和中国最优秀的管理人才。</p>
+						<p class="tags">
+							<em>专业优势</em>
+							<em>培养方案</em>
+							<em>师资力量</em>
+						</p>
+					</div>
+				</li>
+				<li>
+					<span class="left">.05</span>
+					<div class="right">
+						<h3>领导力与组织管理</h3>
+						<p class="text">包括组织学习和学习型组织、组织文化管理、战略人力资源管理、领导行为、团队管理、人力资源开发与管理、绩效与薪酬管理等。</p>
+						<p class="tags">
+							<em>专业优势</em>
+							<em>培养方案</em>
+							<em>师资力量</em>
+						</p>
+					</div>
+				</li>
+				<li>
+					<span class="left">.06</span>
+					<div class="right">
+						<h3>管理科学与工程</h3>
+						<p class="text">前身为清华大学管理工程系，于1979年成立，并开始招收管理工程专业研究生，1981年获得“系统工程”博士授予权。1985 年，建立管理科学与工程博士后流动站。
+						</p>
+						<p class="tags">
+							<em>专业优势</em>
+							<em>培养方案</em>
+							<em>师资力量</em>
+						</p>
+					</div>
+				</li>
+				<li>
+					<span class="left">.07</span>
+					<div class="right">
+						<h3>市场营销</h3>
+						<p class="text">包括消费者行为、营销模型和营销定量分析方法、营销战略，涵盖大数据营销、网络营销、零售管理、渠道管理、品牌管理、整合营销沟通等。</p>
+						<p class="tags">
+							<em>专业优势</em>
+							<em>培养方案</em>
+							<em>师资力量</em>
+						</p>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<!-- 列表2 -->
+	<section class="ty-new-list">
+		<div class="list clearfix">
+			<a href="">
+				<span class="time">MAY<br /><strong>16</strong></span>
+				<div class="detial">
+					<h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
+					<p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+					</p>
+				</div>
+			</a>
+			<a href="">
+				<span class="time">MAY<br /><strong>16</strong></span>
+				<div class="detial">
+					<h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
+					<p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+					</p>
+				</div>
+			</a>
+			<a href="">
+				<span class="time">MAY<br /><strong>16</strong></span>
+				<div class="detial">
+					<h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
+					<p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+					</p>
+				</div>
+			</a>
+			<a href="">
+				<span class="time">MAY<br /><strong>16</strong></span>
+				<div class="detial">
+					<h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
+					<p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+					</p>
+				</div>
+			</a>
+		</div>
+		<a class="ty-more" href="newsList.html">查看更多</a>
+	</section>
+
 	<footer>
 		<div class="container">
 			<div class="footer_top">
@@ -177,7 +280,8 @@
 				<div class="line_bottom"></div>
 				<p class="fl">版权所有：清华大学经济管理学院</p>
 				<p class="fr"><a href="javascript:;">网站地图&nbsp;&nbsp;</a>/<a
-						href="javascript:;">&nbsp;&nbsp;联系我们&nbsp;&nbsp;</a>/<a href="javascript:;">&nbsp;&nbsp;清华大学主页</a></p>
+						href="javascript:;">&nbsp;&nbsp;联系我们&nbsp;&nbsp;</a>/<a
+						href="javascript:;">&nbsp;&nbsp;清华大学主页</a></p>
 			</div>
 		</div>
 	</footer>
