--- a/web-thu/newsDetial.html
+++ b/web-thu/newsDetial.html
@@ -57,7 +57,7 @@
 				<a class="active" href="about.html">关于我们</a>
 				<a href="news.html">通知公告</a>
 				<a href="undergraduate.html">博士项目</a>
-				<a href="school.html">学术报告</a>
+				<a href="report.html">学术报告</a>
 				<a href="recruit.html">招生信息</a>
 				<a href="development.html">就业发展</a>
 			</div>
@@ -74,7 +74,6 @@
 	<!-- 顶部banner -->
 	<div class="ty-banner news news-detail">
 		<div class="container-2">
-			<h2 class="pc">新闻中心</h2>
 			<p class="ty-crumbs">当前位置：<a href="">新闻中心</a><a href="">图片新闻</a></p>
 		</div>
 	</div>
