--- a/web-thu/recruit.html
+++ b/web-thu/recruit.html
@@ -44,21 +44,21 @@
     </header>
     <!-- 导航栏 -->
     <nav class="nav">
-		<div class="nav-top container clearfix">
-			<div class="brand">
-				<a href="index.html"><img class="l" src="./images/logo-1.png" alt=""></a>
-				<a href="index.html"><img class="m" src="./images/logo-2.png" alt=""></a>
-				<a href="index.html"><img class="r" src="./images/logo-3.png" alt=""></a>
-			</div>
-			<i class="f-ifont menu for-mobile">&#xe600;</i>
-		</div>
-		<div class="nav_list">
-			<div class="in">
+        <div class="nav-top container clearfix">
+            <div class="brand">
+                <a href="index.html"><img class="l" src="./images/logo-1.png" alt=""></a>
+                <a href="index.html"><img class="m" src="./images/logo-2.png" alt=""></a>
+                <a href="index.html"><img class="r" src="./images/logo-3.png" alt=""></a>
+            </div>
+            <i class="f-ifont menu for-mobile">&#xe600;</i>
+        </div>
+        <div class="nav_list">
+            <div class="in">
                 <a href="index.html">首页</a>
                 <a class="active" href="about.html">关于我们</a>
                 <a href="news.html">通知公告</a>
                 <a href="undergraduate.html">博士项目</a>
-                <a href="school.html">学术报告</a>
+                <a href="report.html">学术报告</a>
                 <a href="recruit.html">招生信息</a>
                 <a href="development.html">就业发展</a>
             </div>
@@ -70,11 +70,11 @@
                     <i class="search f-ifont">&#xe656;</i>
                 </form>
             </div>
-		</div>
-	</nav>
+        </div>
+    </nav>
     <!-- 顶部banner -->
     <div class="ty-banner">
-        <img class="banner-img" src="./images/new/banner-zs.png" alt="">
+        <img class="banner-img" src="./images-2/zs-top.png" alt="">
         <div class="container-2">
             <h2>招生信息</h2>
         </div>
@@ -84,49 +84,171 @@
         </div>
     </div>
 
-    <!-- 招生指南 -->
-    <div class="ty-zs">
-        <h2 class="ty-title">招生指南</h2>
-        <div class="img">
-            <div class="img-in"><img class="bg" src="./images/new/zs.png" alt=""></div>
-        </div>
-        <div class="container-2">
-            <div class="in">
-                <h3>清华经管的优势</h3>
+    <!-- 直博生 -->
+    <div class="ty-zs-doc">
+        <div class="main">
+            <div class="step">
+                <img src="./images-2/zs-1.png" alt="">
+                <h3>申请流程</h3>
                 <ul>
-                    <li><em>1</em><span>个性发展 生活温馨</span></li>
-                    <li class="sp"><em>2</em><span>通识教育：人文、社会科学、自然<br>科学类课程</span></li>
-                    <li><em>3</em><span>国际接轨 全球视野</span> </li>
-                    <li><em>4</em><span>顾问委员走进清华经管课堂</span> </li>
+                    <li>
+                        <div class="point"><em>报名</em></div>
+                        <div class="detial">
+                            <p class="second">
+                                <span>第一批<br />4月中旬-5月中旬</span>
+                                <span>第二批<br />8月中旬-9月中旬</span>
+                            </p>
+                            <p class="text">申请表、两封推荐信、中英文个人简历、个人陈述、本科学习成绩单、其他证明材料。
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="point"><em>复试</em></div>
+                        <div class="detial">
+                            <p class="second">
+                                <span>第一批<br />6月-7月</span>
+                                <span>第二批<br />9月中旬</span>
+                            </p>
+                            <p class="text">申请表、两封推荐信、中英文个人简历、个人陈述、本科学习成绩单、其他证明材料。
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="point"><em>拟录取</em><span>完成推免手续</span></div>
+                        <div class="detial">
+                            <p class="one">
+                                每年9月下旬-11月上旬
+                            </p>
+                            <p class="text">
+                                经管学院发出拟录取通知，申请人完成本科院校及清华经管学院双方要求的推免手续。
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="point"><em>正式录取</em></div>
+                        <div class="detial">
+                            <p class="one">
+                                次年5月下旬-6月下旬
+                            </p>
+                            <p class="text">
+                                清华大学正式发放录取通知书、录取协议、调档函等与录取相关文件。
+                            </p>
+                        </div>
+                    </li>
                 </ul>
-                <a class="ty-more">查看更多</a>
+            </div>
+            <div class="about">
+                <p>清华大学经济管理学院招收具有学术研究潜质的优秀学生攻读博士学位，充分利用多学科优势，为高校、政府和其他研究机构培养顶尖的经济类和管理类的学术研究人才，特别是国内外重点高校教师。</p>
+                <p>2009年以来，清华经管学院推进了多项博士生培养环节的改革，坚持学术研究导向，严格控制培养质量。为减少学生的生活负担，专心学术研究，清华经管学院提高博士生奖助学金，资助优秀博士生在学期间到海外著名研究型大学学习一学期或一学年，以及参加国内、国外的学术会议。每个博士专业还有一位教师专门负责博士生的就业辅导，帮助学生进行职业发展规划，为博士生进入重点高校和研究机构提供有效的帮助。清华经管学院根据清华大学博士研究生招生简章进行招生，仅招收脱产博士研究生。选拔招收博士研究生本着公平、公开、公正的原则，注重考察申请人的综合素质和研究潜力。
+                </p>
             </div>
         </div>
     </div>
 
-    <!-- 文件下载 -->
-    <div class="ty-download">
-        <h3 class="ty-title">文件下载</h3>
-        <div class="warp">
-            <div class="img"><img src="./images/new/donload.png" alt=""></div>
-            <div class="in">
+    <!-- 普博生 -->
+    <div class="ty-zs-doc ty-zs-doc-2">
+        <div class="main">
+            <div class="step">
+                <img src="./images-2/zs-2.png" alt="">
+                <h3>申请流程</h3>
                 <ul>
                     <li>
-                        <a href=""><span class="time">2012-05-22</span><span class="name">课程一览</span><span class="download f-ifont" href="">&#xe712;</span></a>
+                        <div class="point"><em>报名</em></div>
+                        <div class="detial">
+                            <p class="second">
+                                <span>第一批<br />4月中旬-5月中旬</span>
+                                <span>第二批<br />8月中旬-9月中旬</span>
+                            </p>
+                            <p class="text">
+                                申请表、两封推荐信、中英文个人简历、个人陈述、本科学习成绩单、硕士学习成绩单、本科毕业证书复印件、硕士毕业证书复印件、境外学位需通过教育部留学服务中心认证、其他证明材料。
+                            </p>
+                        </div>
                     </li>
                     <li>
-                        <a href=""><span class="time">2012-05-22</span><span class="name">2013本科招生视频</span><span class="download f-ifont" href="">&#xe712;</span></a>
+                        <div class="point"><em>复试</em></div>
+                        <div class="detial">
+                            <p class="second">
+                                <span>第一批<br />6月-7月</span>
+                                <span>第二批<br />9月中旬</span>
+                            </p>
+                            <p class="text">
+                                各博士项目对已收到完整材料的申请人材料进行初审，对初审通过者组织笔试和面试。
+                            </p>
+                        </div>
                     </li>
                     <li>
-                        <a href=""><span class="time">2012-05-22</span><span class="name">清华经管学院雇主招聘手册</span><span class="download f-ifont" href="">&#xe712;</a>
-
-                        </span></li>
+                        <div class="point"><em>拟录取</em><span>完成推免手续</span></div>
+                        <div class="detial">
+                            <p class="second">
+                                <span>第一批<br />7月中旬</span>
+                                <span>第二批<br />9月中旬</span>
+                            </p>
+                            <p class="text">
+                                考试结束后即做出预录取、等待或拒绝的决定。并邮件通知考生本人。
+                            </p>
+                        </div>
+                    </li>
                     <li>
-                        <a href=""><span class="time">2012-05-22</span><span class="name">2018本科招生介绍</span><span class="download f-ifont" href="">&#xe712;</span></a>
+                        <div class="point"><em>正式录取</em></div>
+                        <div class="detial">
+                            <p class="one">
+                                次年5月下旬-6月下旬
+                            </p>
+                            <p class="text">
+                                清华大学正式发放录取通知书、录取协议、调档函等与录取相关文件。
+                            </p>
+                        </div>
                     </li>
                 </ul>
-                <a href="" class="ty-more">查看更多</a>
             </div>
+            <div class="about">
+                <p>清华大学经济管理学院将每年夏季在北京举办全国“ 优秀大学生夏令营”活动。</p>
+                <p>夏令营旨在增进国内高校优秀本科生对经济管理学科研究的了解，对清华经济管理学科的认识，并从中选拔有潜力者继续深造。</p>
+                <p>在此期间，来自全国各高校的优秀大学生将与清华经管学院的教授进行面对面交流，通过专题讲座、互动讨论等形式，促进师生之间的了解，感受清华经管学院的研究氛围，同时为下一年接收免试推荐研究生进行初步遴选工作。
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="ty-china">
+        <h3 class="ty-title">港澳台学生</h3>
+
+        <div class="in">
+            <img src="./images-2/zs-3.png" alt="">
+            <div class="detial">
+                <p>清华大学经济管理学院博士项目的培养理念为“追求真理，崇尚科学”。清华经管学院博士项目招收具有学术研究潜质的优秀学生，每年7月和9月招生，标准学制为3至5年，仅招收脱产攻读的博士研究生。清华经管学院充分利用多学科优势，力争培养顶尖的经济类和管理类的学术研究人才，特别是国内外重点高校教师。从2009年开始，清华经管学院推进了多项博士生培养环节的改革，以提高博士生培养的质量。清华经管学院博士项目教育改革集中在四方面......
+                </p>
+                <a class="ty-more" href="">查看更多</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="ty-china ty-abort">
+        <h3 class="ty-title">国际学生</h3>
+
+        <div class="in">
+            <img src="./images-2/zs-4.png" alt="">
+            <div class="detial">
+                <p>清华大学经济管理学院博士项目的培养理念为“追求真理，崇尚科学”。清华经管学院博士项目招收具有学术研究潜质的优秀学生，每年7月和9月招生，标准学制为3至5年，仅招收脱产攻读的博士研究生。清华经管学院充分利用多学科优势，力争培养顶尖的经济类和管理类的学术研究人才，特别是国内外重点高校教师。从2009年开始，清华经管学院推进了多项博士生培养环节的改革，以提高博士生培养的质量。清华经管学院博士项目教育改革集中在四方面......
+                </p>
+                <a class="ty-more" href="">查看更多</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="ty-connect-zs">
+        <h3 class="ty-title">国际学生</h3>
+
+        <div class="in">
+            <h3>教学办公室（博士及研究型硕士专业方向）</h3>
+            <p>
+                地 址：北京市海淀区清华大学经济管理学院伟伦楼116室<br />
+                邮 编：100084<br />
+                电 话：（8610）6279 5329<br />
+                E-mail：pgadmit@sem.tsinghua.edu.cn<br />
+                网 址：http://www.sem.tsinghua.edu.cn/portalweb/appmanager/portal/pg<br />
+                微 博：http://weibo.com/u/2820242187
+            </p>
         </div>
     </div>
 
@@ -140,11 +262,11 @@
                     <p>Email：ugadmit@sem.tsinghua.edu.cn</p>
                 </div>
                 <div class="fr top_right">
-					<a class="f-ifont" href="javascript:;">&#xe65d;
-						<div class="socialwraper"><i><em></em></i><img src="./images/weixinma.png"></div>
-					</a>
-					<a class="f-ifont" href="javascript:;">&#xe882;</a>
-				</div>
+                    <a class="f-ifont" href="javascript:;">&#xe65d;
+                        <div class="socialwraper"><i><em></em></i><img src="./images/weixinma.png"></div>
+                    </a>
+                    <a class="f-ifont" href="javascript:;">&#xe882;</a>
+                </div>
 
             </div>
             <div class="footer_botttom">
