--- a/web-thu/news.html
+++ b/web-thu/news.html
@@ -59,7 +59,7 @@
 					<a class="active" href="about.html">关于我们</a>
 					<a href="news.html">通知公告</a>
 					<a href="undergraduate.html">博士项目</a>
-					<a href="school.html">学术报告</a>
+					<a href="report.html">学术报告</a>
 					<a href="recruit.html">招生信息</a>
 					<a href="development.html">就业发展</a>
 				</div>
@@ -74,18 +74,19 @@
 			</div>
 		</div>
 	</nav>
-	<!-- 顶部banner -->
 
-	<div class="ty-banner news">
+	<!-- 顶部banner -->
+	<div class="ty-banner">
+		<img class="banner-img" src="./images-2/news-top.png" alt="">
 		<div class="container-2">
-			<h2>新闻中心</h2>
+			<h2>通知公告</h2>
 		</div>
 	</div>
 
 	<!-- 列表1 -->
 	<section class="newList container ty-practice">
 		<a href="" class="newText clearfix fl">
-			<div class="img"><img src="./images/new/school-item2.png" alt=""></div>
+			<div class="img"><img src="./images-2/news.png" alt=""></div>
 			<div class="left fl">
 				<span class="month">JUN</span>
 				<span class="day">19</span>
@@ -96,7 +97,7 @@
 				中英文双语国际新生学费交费系统是为国际学生（包括国际本科生、国际研究生和非学位项目学生）提供的中英线上学费交费系统，具备信息化、网络化、数字化的特征，可以较好解决国际学生学费无法在线支付问题，</p>
 		</a>
 		<a href="" class="newText clearfix fl">
-			<div class="img"><img src="./images/new/school-item2.png" alt=""></div>
+			<div class="img"><img src="./images-2/news.png" alt=""></div>
 			<div class="left fl">
 				<span class="month">JUN</span>
 				<span class="day">30</span>
@@ -107,7 +108,7 @@
 				北京）体育交流运动会隆重开幕。国台办副主任龙明彪</p>
 		</a>
 		<a href="" class="newText clearfix fl">
-			<div class="img"><img src="./images/new/school-item2.png" alt=""></div>
+			<div class="img"><img src="./images-2/news.png" alt=""></div>
 			<div class="left fl">
 				<span class="month">JUN</span>
 				<span class="day">07</span>
