--- a/web-thu/newsList2.html
+++ b/web-thu/newsList2.html
@@ -57,7 +57,7 @@
 				<a class="active" href="about.html">关于我们</a>
 				<a href="news.html">通知公告</a>
 				<a href="undergraduate.html">博士项目</a>
-				<a href="school.html">学术报告</a>
+				<a href="report.html">学术报告</a>
 				<a href="recruit.html">招生信息</a>
 				<a href="development.html">就业发展</a>
 			</div>
