--- a/web-thu/about.html
+++ b/web-thu/about.html
@@ -82,10 +82,8 @@
 		</div>
 		<div class="nav-list">
 			<span data-to="ty-dean">院长致辞</span>
-			<span data-to="ty-products">项目介绍</span>
-			<span data-to="ty-general">通识教育</span>
-			<span data-to="ty-training">培养理念</span>
-			<span data-to="ty-connect">联系我们</span>
+			<span data-to="ty-products">学院简介</span>
+			<span data-to="ty-general">研究生改革</span>
 		</div>
 	</div>
 	<!-- 院长致辞 -->
@@ -93,26 +91,27 @@
 		<div class="dean-img fl">
 			<img src="images/new/xz.png" alt="">
 			<div class="name">
-				<h3>白重恩</h3>
+				<h3>白重恩 教授</h3>
 				<p>清华经管学院现任院长</p>
 			</div>
 		</div>
 
 		<div class="dean-say fr">
 			<h3 class="ty-title">院长致辞</h3>
-			<p>我热情地欢迎2017年全国各省文、理科高中毕业生报考清华大学经济管理学院。多年来，清华经管学院一直是高考中各省最优秀考生的首选。在每年秋季学期，我为新生讲授《经济学原理》课程，亲身体验到清华经管学院本科生的优秀。
-			</p>
-			<p>
-				近年来，清华经管学院大力度地改革本科教育的理念与实践。学院提出了培养每一位学生成为有良好素养的现代文明人，同时创造一种环境使得杰出人才能够脱颖而出的本科教育理念，并在此基础上建立了“通识教育与个性发展相结合”的国际化本科教育体系。清华经管学院本科教育改革获得2014年国家级教学成果一等奖，在国内外获得认可和好评。
-			</p>
-			<p>我有幸成为“文革”后恢复高考时清华大学首届（1977级）本科生。清华使我有机会在八十年代初就出国留学，为我日后的发展打下了坚实的根基。在清华结识的同学们，是我一生中的良师益友。希望你们也选择清华，选择清华经管学院。
-			</p>
+
+			<p>我衷心地欢迎同学们申报清华大学经济管理学院的博士项目。最近几年来，清华经管学院在博士教育方面进行了大力度的改革，严格控制博士生培养质量，取得了突破性的进展。近几年的实践也证明，从清华经管走出的博士水平很高，能够适应国内外高水平的科研与就业要求。</p>
+			<p>经管学院配备有高水平的教师队伍，也有来自海外的访问教授，在清华经管，同学们可以享受高质量的教师资源，享受与优秀学者争锋的快乐。同时，我们提高了博士生奖助学金，减少同学们的生活负担，并且提供海外学习和参加国际学术会议的机会。</p>
+			<p>经管学院的使命是：创造知识、培养领袖、贡献中国、影响世界；我们为博士项目确立的教育理念是“追求真理、崇尚科学”。我们鼓励有志于学术追求的博士同学们在学期间不仅要有学习知识的能力，同时也要有创造知识的能力，至少为未来创造知识打下扎实的基础。</p>
+			<p>我祝愿大家在读博的路上能够喜欢研究的过程，享受研究的过程，不仅在研究上有丰硕的成果，也收获在研究过程中带来的乐趣。</p>
+									
+			
 			<img class="write-img" src="./images/new/name.png" alt="">
 		</div>
 	</div>
 
 	<!-- 学院简介 -->
 	<div class="ty-training">
+		<h3 class="ty-title">学院简介</h3>
 		<div class="about-list">
 			<ul>
 				<li>
@@ -139,10 +138,11 @@
 
 	<!-- 联系我们 -->
 	<div class="ty-connect">
+			<h3 class="ty-title">联系我们</h3>
+
 		<img src="images-2/about-connect.png" alt="">
 
 		<div class="in">
-			<h3 class="ty-title">联系我们</h3>
 			<p>
 				地址：北京市海淀区清华大学经济管理学院伟伦楼116<br />
 				邮编：100084<br />
