--- a/web-thu/index.html
+++ b/web-thu/index.html
@@ -54,8 +54,8 @@
 		</div>
 		<div class="nav_list">
 			<div class="in">
-				<a href="index.html">首页</a>
-				<a class="active" href="about.html">关于我们</a>
+				<a class="active" href="index.html">首页</a>
+				<a href="about.html">关于我们</a>
 				<a href="news.html">通知公告</a>
 				<a href="undergraduate.html">博士项目</a>
 				<a href="report.html">学术报告</a>
@@ -222,7 +222,9 @@
 	</div>
 
 	<!-- 列表2 -->
-	<section class="ty-new-list">
+	<section class="ty-new-list ty-index-report">
+		<h3 class="ty-title">学术报告</h3>
+
 		<div class="list clearfix">
 			<a href="">
 				<span class="time">MAY<br /><strong>16</strong></span>
@@ -257,7 +259,7 @@
 				</div>
 			</a>
 		</div>
-		<a class="ty-more" href="newsList.html">查看更多</a>
+		<p class="add-more"><a class="ty-more" href="newsList.html">查看更多</a></p>
 	</section>
 
 	<footer>
