--- a/web-thu/news.html
+++ b/web-thu/news.html
@@ -56,8 +56,8 @@
 			<div class="nav_list">
 				<div class="in">
 					<a href="index.html">首页</a>
-					<a class="active" href="about.html">关于我们</a>
-					<a href="news.html">通知公告</a>
+					<a href="about.html">关于我们</a>
+					<a class="active" href="news.html">通知公告</a>
 					<a href="undergraduate.html">博士项目</a>
 					<a href="report.html">学术报告</a>
 					<a href="recruit.html">招生信息</a>
@@ -171,7 +171,9 @@
 				</div>
 			</a>
 		</div>
-		<a class="ty-more" href="newsList.html">查看更多</a>
+		<p class="add-more">
+			<a class="ty-more" href="newsList.html">查看更多</a>
+		</p>
 	</section>
 
 	<!-- 底部 -->
